--- a/app/design/frontend/gs-default/default/template/catalog/product/view.phtml
+++ b/app/design/frontend/gs-default/default/template/catalog/product/view.phtml
@@ -14,6 +14,36 @@
         </div>
         <div class="product-img-box fleft">
 			<?php echo $this->getChildHtml('media') ?>
+            <script type="text/javascript">
+            //<![CDATA[
+                function initProductZoom() {
+                    jQuery('.jqzoom-image').jqzoom({
+                        zoomType: "reverse",
+                        imageOpacity: 0.2,
+                        preloadImages: true,
+                        showPreload: true,
+                        preloadText: "Loading",
+                        lens: true,
+                        lensCursor: "crosshair",
+                        position: "right",
+                        zoomHeight: 456,
+                        title: false
+                    });  
+                    jQuery(".more-views .gallery-carousel").jCarouselLite({
+                        btnNext: ".more-views .btn-next .next",
+                        btnPrev: ".more-views .btn-prev .prev",
+                        visible: 3,
+                        scroll: 1,
+                        circular: false,
+                        speed: 500,
+                        vertical: true,
+                    });
+                }
+                jQuery(document).ready(function($){
+                    initProductZoom();
+                });  
+            //]]>
+            </script>
 		</div>
         <div class="product-shop  detail_description">
             <div class="product-name">
