--- a/app/design/frontend/gs-default/default/template/catalog/product/view/media.phtml
+++ b/app/design/frontend/gs-default/default/template/catalog/product/view/media.phtml
@@ -4,47 +4,44 @@
 ?>
 <div class="more-views detail_tn" style="height:458px;">
 <?php if (count($this->getGalleryImages()) > 0): ?>
-    <ul>
-    <?php foreach ($this->getGalleryImages() as $_image): ?>
-        <li>
-            <a href="#" onclick="popWin('<?php echo $this->getGalleryUrl($_image) ?>', 'gallery', 'width=300,height=300,left=0,top=0,location=no,status=yes,scrollbars=yes,resizable=yes'); return false;" title="<?php echo $this->htmlEscape($_image->getLabel()) ?>">
-				<img src="<?php echo $this->helper('catalog/image')->init($this->getProduct(), 'thumbnail', $_image->getFile())->resize(69,104); ?>" width="69" height="104" alt="<?php echo $this->htmlEscape($_image->getLabel()) ?>" />
-			</a>
-        </li>
-    <?php endforeach; ?>
-    </ul>
+    <div class="btn-prev">
+        <a href="javascript:void(0);" class="prev"></a>
+    </div>
+    <div class="gallery-carousel" style="height:400px;">
+        <ul id="thumblist">
+        <?php foreach ($this->getGalleryImages() as $_image): ?>
+            <li>
+                <a rel="{gallery: 'product-gallery', smallimage: '<?php echo $this->helper('catalog/image')->init($this->getProduct(), 'thumbnail', $_image->getFile())->resize(305,456); ?>',largeimage: '<?php echo $this->helper('catalog/image')->init($this->getProduct(), 'thumbnail', $_image->getFile())->resize(510,912); ?>'}" href="javascript:void(0);" title="<?php echo $this->htmlEscape($_image->getLabel()) ?>">
+                    <img src="<?php echo $this->helper('catalog/image')->init($this->getProduct(), 'thumbnail', $_image->getFile())->resize(69,104); ?>" width="69" height="104" alt="<?php echo $this->htmlEscape($_image->getLabel()) ?>"/>
+                </a>
+            </li>
+        <?php endforeach; ?>
+        </ul>
+        <div class="clear"></div>
+    </div>
+    <div class="btn-next">
+        <a href="javascript:void(0);" class="next"></a>
+    </div>
 <?php else: ?>
 	&nbsp;
 <?php endif; ?>
 </div>
 <?php if ($_product->getImage() != 'no_selection' && $_product->getImage()): ?>
 <div class="product-image product-image-zoom detail_large">
+    <a rel='product-gallery' href="<?php echo $this->helper('catalog/image')->init($_product, 'image')->resize(510,912) ?>" class="jqzoom-image">
 	<?php
-		$_img = '<img id="image" src="'.$this->helper('catalog/image')->init($_product, 'image')->resize(255,456).'" alt="'.$this->htmlEscape($this->getImageLabel()).'" title="'.$this->htmlEscape($this->getImageLabel()).'" />';
+		$_img = '<img id="image" src="'.$this->helper('catalog/image')->init($_product, 'image')->resize(305,456).'" alt="'.$this->htmlEscape($this->getImageLabel()).'" title="'.$this->htmlEscape($this->getImageLabel()).'" />';
 		echo $_helper->productAttribute($_product, $_img, 'image');
 	?>
-<!--<div style="display:none;position:absolute;top:212px;left:136px;background:#ffffff;opacity:0.6;border-radius:5px;" class="scp-please-wait">-->
-	<div style="display:none;position:absolute;top:0;left:0;width:inherit;height:inherit;background:#ffffff;opacity:0.6;border-radius:5px;" class="scp-please-wait">
+    </a>
+	<div style="display:none;position:absolute;top:0;left:0;width:inherit;height:inherit;background:#ffffff;opacity:0.6;border-radius:5px;z-index:999;" class="scp-please-wait">
 		<img src="<?php echo $this->getSkinUrl('images/preview.gif') ?>" class="v-middle" alt="" style="position:absolute;top:212px;left:141px;"/>
 	</div>
 </div>
-<?php if(false): ?>
-<p class="zoom-notice" id="track_hint"><?php echo $this->__('Double click on above image to view full picture') ?></p>
-<div class="zoom">
-	<img id="zoom_out" src="<?php echo $this->getSkinUrl('images/slider_btn_zoom_out.gif') ?>" alt="<?php echo $this->__('Zoom Out') ?>" title="<?php echo $this->__('Zoom Out') ?>" class="btn-zoom-out" />
-	<div id="track">
-		<div id="handle"></div>
-	</div>
-	<img id="zoom_in" src="<?php echo $this->getSkinUrl('images/slider_btn_zoom_in.gif') ?>" alt="<?php echo $this->__('Zoom In') ?>" title="<?php echo $this->__('Zoom In') ?>" class="btn-zoom-in" />
+<div class="clear"></div>
+<div style="text-align:center; padding:10px 0px 0px 0px;width:307px;float:right;">
+    <?php echo $this->__('+ Hover image to zoom') ?>
 </div>
-<script type="text/javascript">
-//<![CDATA[
-	Event.observe(window, 'load', function() {
-		product_zoom = new Product.Zoom('image', 'track', 'handle', 'zoom_in', 'zoom_out', 'track_hint');
-	});
-//]]>
-</script>
-<?php endif; ?>
 <?php else: ?>
 <div class="product-image detail_large">
 	<?php
@@ -55,57 +52,4 @@
 		<img src="<?php echo $this->getSkinUrl('images/preview.gif') ?>" class="v-middle" alt="" style="position:absolute;top:212px;left:141px;"/>
 	</div>
 </div>
-<?php endif; ?>
-<div class="clear"></div>
-<div style="text-align:center; padding:10px 0px 0px 0px;width:307px;float:right;">
-	<?php echo $this->__('+ Click image to zoom') ?>
-</div>
-<?php if(false): ?>
-<!----------------------------------------------------------->
-<?php
-    $_product = $this->getProduct();
-    $_helper = $this->helper('catalog/output');
-?>
-<?php if ($_product->getImage() != 'no_selection' && $_product->getImage()): ?>
-<p class="product-image product-image-zoom">
-    <?php
-        $_img = '<img id="image" src="'.$this->helper('catalog/image')->init($_product, 'image').'" alt="'.$this->htmlEscape($this->getImageLabel()).'" title="'.$this->htmlEscape($this->getImageLabel()).'" />';
-        echo $_helper->productAttribute($_product, $_img, 'image');
-    ?>
-</p>
-<p class="zoom-notice" id="track_hint"><?php echo $this->__('Double click on above image to view full picture') ?></p>
-<div class="zoom">
-    <img id="zoom_out" src="<?php echo $this->getSkinUrl('images/slider_btn_zoom_out.gif') ?>" alt="<?php echo $this->__('Zoom Out') ?>" title="<?php echo $this->__('Zoom Out') ?>" class="btn-zoom-out" />
-    <div id="track">
-        <div id="handle"></div>
-    </div>
-    <img id="zoom_in" src="<?php echo $this->getSkinUrl('images/slider_btn_zoom_in.gif') ?>" alt="<?php echo $this->__('Zoom In') ?>" title="<?php echo $this->__('Zoom In') ?>" class="btn-zoom-in" />
-</div>
-<script type="text/javascript">
-//<![CDATA[
-    Event.observe(window, 'load', function() {
-        product_zoom = new Product.Zoom('image', 'track', 'handle', 'zoom_in', 'zoom_out', 'track_hint');
-    });
-//]]>
-</script>
-<?php else: ?>
-<p class="product-image">
-    <?php
-        $_img = '<img src="'.$this->helper('catalog/image')->init($_product, 'image')->resize(265).'" alt="'.$this->htmlEscape($this->getImageLabel()).'" title="'.$this->htmlEscape($this->getImageLabel()).'" />';
-        echo $_helper->productAttribute($_product, $_img, 'image');
-    ?>
-</p>
-<?php endif; ?>
-<?php if (count($this->getGalleryImages()) > 0): ?>
-<div class="more-views detail_tn">
-    <h2><?php echo $this->__('More Views') ?></h2>
-    <ul>
-    <?php foreach ($this->getGalleryImages() as $_image): ?>
-        <li>
-            <a href="#" onclick="popWin('<?php echo $this->getGalleryUrl($_image) ?>', 'gallery', 'width=300,height=300,left=0,top=0,location=no,status=yes,scrollbars=yes,resizable=yes'); return false;" title="<?php echo $this->htmlEscape($_image->getLabel()) ?>"><img src="<?php echo $this->helper('catalog/image')->init($this->getProduct(), 'thumbnail', $_image->getFile())->resize(56); ?>" width="56" height="56" alt="<?php echo $this->htmlEscape($_image->getLabel()) ?>" /></a>
-        </li>
-    <?php endforeach; ?>
-    </ul>
-</div>
-<?php endif; ?>
 <?php endif; ?>
