--- a/app/design/frontend/gs-default/default/template/checkout/cart.phtml
+++ b/app/design/frontend/gs-default/default/template/checkout/cart.phtml
@@ -32,102 +32,104 @@
  */
 ?>
 
-<div class="head_result"><?php echo $this->__('SHOPPING BAG');?></div>
-<div class="clear"></div>
-<div class="shopping_bag">
-	
-	<?php /* if(!$this->hasError()): ?>	
-		<ul class="checkout-types">
-		<?php foreach ($this->getMethods('top_methods') as $method): ?>
-			<?php if ($methodHtml = $this->getMethodHtml($method)): ?>
-			<li><?php echo $methodHtml; ?></li>
-			<?php endif; ?>
-		<?php endforeach; ?>
-		</ul>
-	<?php endif; */?>
-	
-	<?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
-    <?php echo $this->getChildHtml('form_before') ?>
-	
-	<?php foreach ($this->getMethods('top_methods') as $method): ?>
-		<?php if ($methodHtml = $this->getMethodHtml($method)): ?>
-			<div class="rad_8 btn_block" style="margin-right:10px;">
-				<?php echo $methodHtml; ?>
-			</div>
-		<?php endif; ?>
-	<?php endforeach; ?>
-	
-	<?php if($this->getContinueShoppingUrl()): ?>
-		<div class="rad_8 btn_block2" style="margin-right:10px;">
-			<button type="button" title="<?php echo $this->__('Continue Shopping') ?>" onclick="setLocation('<?php echo $this->getContinueShoppingUrl() ?>')">
-				<span><?php echo $this->__('Continue Shopping') ?></span>
-			</button>
-		</div>		
-	<?php endif; ?>	
-	
-	<div class="clear"></div>	
-	
-    <form id="frmCart" action="<?php echo $this->getUrl('checkout/cart/updatePost') ?>" method="post">
-		<input type="submit" name="update_cart_action" value="update_qty" style="display:none"/>
-		<table width="100%" cellspacing="0" cellpadding="0" border="0">
-            <tbody>
-			<tr>
-				<th width="393"><?php echo $this->__('DETAILS');?></th>
-				<th width="219"><?php echo $this->__('QUANTITY');?></th>
-				<th width="148"><?php echo $this->__('UNIT PRICE');?></th>
-				<th><?php echo $this->__('SUB TOTAL');?></th>
-            </tr>
-			
-			<?php foreach($this->getItems() as $_item): ?>
-				<?php echo $this->getItemHtml($_item) ?>
-			<?php endforeach ?>
-			</tbody>
-		</table>
-	
-	</form>
-	
-	<?php echo $this->getChildHtml('totals'); ?>  
-	
-	
-	<div class="logos_merchant">
-		<div class="fleft"><img alt="" src="<?php echo $this->getSkinUrl('images/logos_merch_1.jpg') ?>"> <img alt="" src="<?php echo $this->getSkinUrl('images/logos_merch_2.jpg') ?>"></div>
-		<div class="fright">
+<div class="cart">
+	<div class="head_result"><?php echo $this->__('SHOPPING BAG');?></div>
+	<div class="clear"></div>
+
+	<div class="shopping_bag">
 		
-		
-			 <?php foreach ($this->getMethods('top_methods') as $method): ?>
+		<?php /* if(!$this->hasError()): ?>	
+			<ul class="checkout-types">
+			<?php foreach ($this->getMethods('top_methods') as $method): ?>
 				<?php if ($methodHtml = $this->getMethodHtml($method)): ?>
-					<div class="rad_8 btn_block" style="margin-right:10px;">
-						<?php echo $methodHtml; ?>
-					</div>
+				<li><?php echo $methodHtml; ?></li>
 				<?php endif; ?>
 			<?php endforeach; ?>
-			
+			</ul>
+		<?php endif; */?>
+		
+		<?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
+		<?php echo $this->getChildHtml('form_before') ?>
+		
+		<?php foreach ($this->getMethods('top_methods') as $method): ?>
+			<?php if ($methodHtml = $this->getMethodHtml($method)): ?>
+				<div class="rad_8 btn_block" style="margin-right:10px;">
+					<?php echo $methodHtml; ?>
+				</div>
+			<?php endif; ?>
+		<?php endforeach; ?>
+		
+		<?php if($this->getContinueShoppingUrl()): ?>
 			<div class="rad_8 btn_block2" style="margin-right:10px;">
 				<button type="button" title="<?php echo $this->__('Continue Shopping') ?>" onclick="setLocation('<?php echo $this->getContinueShoppingUrl() ?>')">
 					<span><?php echo $this->__('Continue Shopping') ?></span>
 				</button>
 			</div>		
+		<?php endif; ?>	
+		
+		<div class="clear"></div>	
+		
+		<form id="frmCart" action="<?php echo $this->getUrl('checkout/cart/updatePost') ?>" method="post">
+			<input type="submit" name="update_cart_action" value="update_qty" style="display:none"/>
+			<table width="100%" cellspacing="0" cellpadding="0" border="0">
+				<tbody>
+				<tr>
+					<th width="393"><?php echo $this->__('DETAILS');?></th>
+					<th width="219"><?php echo $this->__('QUANTITY');?></th>
+					<th width="148"><?php echo $this->__('UNIT PRICE');?></th>
+					<th><?php echo $this->__('SUB TOTAL');?></th>
+				</tr>
+				
+				<?php foreach($this->getItems() as $_item): ?>
+					<?php echo $this->getItemHtml($_item) ?>
+				<?php endforeach ?>
+				</tbody>
+			</table>
+		
+		</form>
+		
+		<?php echo $this->getChildHtml('totals'); ?>  
+		
+		
+		<div class="logos_merchant">
+			<div class="fleft"><img alt="" src="<?php echo $this->getSkinUrl('images/logos_merch_1.jpg') ?>"> <img alt="" src="<?php echo $this->getSkinUrl('images/logos_merch_2.jpg') ?>"></div>
+			<div class="fright">
+			
+			
+				 <?php foreach ($this->getMethods('top_methods') as $method): ?>
+					<?php if ($methodHtml = $this->getMethodHtml($method)): ?>
+						<div class="rad_8 btn_block" style="margin-right:10px;">
+							<?php echo $methodHtml; ?>
+						</div>
+					<?php endif; ?>
+				<?php endforeach; ?>
+				
+				<div class="rad_8 btn_block2" style="margin-right:10px;">
+					<button type="button" title="<?php echo $this->__('Continue Shopping') ?>" onclick="setLocation('<?php echo $this->getContinueShoppingUrl() ?>')">
+						<span><?php echo $this->__('Continue Shopping') ?></span>
+					</button>
+				</div>		
+			</div>
+			<div class="clear"></div>
 		</div>
-		<div class="clear"></div>
+		
+		
+		<?php //echo $this->getChildHtml('checkout.cart.extra') ?>
+		
+		<?php //if (!$this->getIsVirtual()): echo $this->getChildHtml('shipping'); endif; ?>
+		
+		
+		 <script type="text/javascript">
+		//<![CDATA[	
+			function doUpdateQty(){
+				$('frmCart').submit();
+			}	
+		//]]>
+		</script>
+		
+		
 	</div>
-	
-	
-	<?php //echo $this->getChildHtml('checkout.cart.extra') ?>
-	
-	<?php //if (!$this->getIsVirtual()): echo $this->getChildHtml('shipping'); endif; ?>
-	
-	
-	 <script type="text/javascript">
-	//<![CDATA[	
-		function doUpdateQty(){
-			$('frmCart').submit();
-		}	
-	//]]>
-	</script>
-	
-	
 </div>
-
 
 <?php /* ?>
 <div class="cart">
