--- a/app/design/frontend/gs-default/default/template/onestepcheckout/onestepcheckout.phtml
+++ b/app/design/frontend/gs-default/default/template/onestepcheckout/onestepcheckout.phtml
@@ -1,23 +1,23 @@
 <div class="breadcrumbs">
   <ul>
-	<li><a href="#">Home</a><span>|</span></li>
-	<li>Checkout</li>
+	<li><a href="<?php echo $this->getUrl('');?>"><?php echo $this->__('Home');?></a><span>|</span></li>
+	<li><?php echo $this->__('Checkout');?></li>
   </ul>
   <div class="clear"></div>
 </div>
 
-<div class="head_result">CHECKOUT</div>
+<div class="head_result"><?php echo $this->__('CHECKOUT');?></div>
 <div class="clear"></div>
 
 <div class="checkout_wrapper">
 	
-	<div class="detail_title">Please enter your details below to complete your purchase.</div>
+	<div class="detail_title"><?php echo $this->__('Please enter your details below to complete your purchase.');?></div>
   
 	<form id="one-step-checkout-form" method="post" action="<?php echo $this->getCheckoutUrl(); ?>">
   
 		<div class="checkout_block">
 	  
-			<div class="head_area">1. BILLING ADDRESS</div>
+			<div class="head_area">1. <?php echo $this->__('BILLING ADDRESS');?></div>
 
 			<div class="block_step1">			
 				<?php echo $this->getChildHtml('onestepcheckout.billing');?>			
@@ -28,7 +28,7 @@
 	  
 	  
 		<div class="checkout_block">
-			<div class="head_area">2. DELIVERY METHOD</div>
+			<div class="head_area">2. <?php echo $this->__('DELIVERY METHOD');?></div>
 			
 			<?php if (!$this->isVirtual() && !Mage::helper('onestepcheckout')->isHideShippingMethod()):?>		
 				<?php echo $this->getChildHtml('onestepcheckout.shipping_method'); ?>			
@@ -38,7 +38,7 @@
 				<span class="no-display"><input name="shipping_method" type="radio" value="<?php echo $_shippingMethod;?>" id="s_method_<?php echo $_shippingMethod; ?>" checked="checked" /></span>
 			<?php endif; ?>
 			
-			<div class="head_area">3. PAYMENT METHOD</div>			
+			<div class="head_area">3. <?php echo $this->__('PAYMENT METHOD');?></div>			
 			<div class="block_step3">
 				<?php echo $this->getChildHtml('onestepcheckout.payment_method'); ?>
 			</div>
@@ -47,7 +47,7 @@
 		</div>
 	  
 		<div style="margin-right:0px;" class="checkout_block">
-			<div class="head_area">4. REVIEW YOUR ORDER</div>
+			<div class="head_area">4. <?php echo $this->__('REVIEW YOUR ORDER');?></div>
 			<?php echo $this->getChildHtml('onestepcheckout.review') ?>
 			<div class="ajax-loader3" id="ajax-loader3"  style="display:none;"></div>
 		</div>
