--- a/app/design/frontend/gs-default/default/layout/local.xml
+++ b/app/design/frontend/gs-default/default/layout/local.xml
@@ -94,7 +94,7 @@
 
     <catalog_product_view>
         <reference name="root">
-            <action method="setTemplate"><template>page/gs-2columns-right.phtml</template></action>
+            <action method="setTemplate"><template>page/gs-product-details.phtml</template></action>
         </reference>
         
 		<reference name="head">
@@ -109,11 +109,18 @@
 		</reference>
         
         <reference name="product.info.options.wrapper.bottom">
-			<action method="unsetChild"><nane>prices</nane></action>
-			<action method="unsetChild"><nane>product.info.addtocart</nane></action>
-			<action method="unsetChild"><nane>product.info.addto</nane></action>
+			<action method="unsetChild"><name>prices</name></action>
+			<action method="unsetChild"><name>product.info.addtocart</name></action>
+			<action method="unsetChild"><name>product.info.addto</name></action>
         </reference>
-
+        
+        <reference name="right">
+            <action method="unsetChild"><name>catalog.product.related</name></action>
+        </reference>
+        
+        <reference name="product.info">
+            <block type="catalog/product_list_related" name="catalog.product.related" as="related_products" template="catalog/product/list/related.phtml"/>
+        </reference>
     </catalog_product_view>
 	
     <customer_account_logoutsuccess translate="label">
