--- a/app/design/frontend/gs-default/default/template/catalog/product/view.phtml
+++ b/app/design/frontend/gs-default/default/template/catalog/product/view.phtml
@@ -1,3 +1,4 @@
+<div class="w898">
 <?php $_helper = $this->helper('catalog/output'); ?>
 <?php $_product = $this->getProduct(); ?>
 <script type="text/javascript">
@@ -18,7 +19,7 @@
             //<![CDATA[
                 function initProductZoom() {
                     jQuery('.jqzoom-image').jqzoom({
-                        zoomType: "reverse",
+                        zoomType: "standard",
                         imageOpacity: 0.2,
                         preloadImages: true,
                         showPreload: true,
@@ -26,6 +27,7 @@
                         lens: true,
                         lensCursor: "crosshair",
                         position: "right",
+                        zoomWidth: 305,
                         zoomHeight: 456,
                         title: false
                     });  
@@ -97,27 +99,46 @@
 					<?php echo $_helper->productAttribute($_product, $_product->getShortDescription(), 'short_description') ?>
 				<?php endif;?>
             </div>
+            <?php
+                $helper = Mage::helper('cms');
+                $processor =& $helper->getPageTemplateProcessor();
+            ?>
 			<!-- Size Guide and Delivery Returns Begins-->
 			<div id="size-guide-delivery-returns">
+                <?php if($sizeGuideContent = $_product->getGsSizeGuide()): ?>
 				<h4>
 					<a href="javascript:void();"><?php echo $this->__('Size Guide') ?></a>
 				</h4>
 				<div>
-					<p><?php echo $_product->getGsSizeGuide() ?></p>
+					<p><?php echo $processor->filter($sizeGuideContent); ?></p>
 				</div>
+                <?php endif; ?>
+                <?php if($deliveryReturnsContent = $_product->getGsDeliveryReturns()): ?>
 				<h4>
 					<a href="javascript:void();"><?php echo $this->__('Delivery and Returns') ?></a>
 				</h4>
 				<div>
-					<p><?php echo $_product->getGsDeliveryReturns() ?></p>
+					<p><?php echo $processor->filter($deliveryReturnsContent); ?></p>
 				</div>
+                <?php endif; ?>
 			</div>
 			<!-- Size Guide and Delivery Returns Ends-->
 			<div class="social_icons">
+                <!--
 				<div class="social_block"><img alt="" src="<?php echo $this->getSkinUrl('images/details_fb.jpg') ?>"></div>
 				<div class="social_block"><img alt="" src="<?php echo $this->getSkinUrl('images/details_twitter.jpg') ?>"></div>
 				<div class="social_block"><img alt="" src="<?php echo $this->getSkinUrl('images/details_gplus.jpg') ?>"></div>
 				<div class="social_block"><img alt="" src="<?php echo $this->getSkinUrl('images/details_share.jpg') ?>"></div>
+                -->
+                <!-- AddThis Button BEGIN -->
+                <div class="addthis_toolbox addthis_default_style addthis_toolbox">
+                <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
+                <a class="addthis_button_tweet"></a>
+                <a class="addthis_button_google_plusone" g:plusone:size="Medium"></a>
+                <a class="addthis_counter addthis_pill_style"></a>
+                </div>
+                <script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=xa-5000e86342efa0fe"></script>
+                <!-- AddThis Button END -->
 			</div>
 			<?php if(false): ?>
 			<!-- NO REVIEW SUMMARY -->
@@ -218,21 +239,6 @@
     </script>
     </div>
 </div>
-<?php if(false): ?>
-    <div class="product-collateral">
-<?php foreach ($this->getChildGroup('detailed_info', 'getChildHtml') as $alias => $html):?>
-        <div class="box-collateral <?php echo "box-{$alias}"?>">
-            <?php if ($title = $this->getChildData($alias, 'title')):?>
-            <h2><?php echo $this->escapeHtml($title); ?></h2>
-            <?php endif;?>
-            <?php echo $html; ?>
-        </div>
-<?php endforeach;?>
-        <?php echo $this->getChildHtml('upsell_products') ?>
-        <?php echo $this->getChildHtml('product_additional_data') ?>
-    </div>
-</div>
-<?php endif; ?>
 <script type="text/javascript">
 //<![CDATA[
 	jQuery(document).ready(function(){
@@ -240,7 +246,10 @@
 				active: false,
 				collapsible: true,
 				autoHeight: true
-		});	
+		});
 	});
 //]]>
 </script>
+</div>
+<?php echo $this->getChildHtml('related_products') ?>
+<div class="clear"></div>
