changes made for message color

--- a/skin/frontend/gs-default/default/css/styles.css
+++ b/skin/frontend/gs-default/default/css/styles.css
@@ -1794,7 +1794,7 @@ select.error_field{
 }
 /** MESSAGES **/
 .validation-advice {
-	color: #79A341;
+	color: #77A33F;
 	font-size:10px;
 }
 ul.messages{
