--- a/app/design/frontend/gs-default/default/template/sales/order/info.phtml
+++ b/app/design/frontend/gs-default/default/template/sales/order/info.phtml
@@ -57,7 +57,8 @@ address {
 }
 
 .data-table thead th {
-    background: url("<?php echo $this->getSkinUrl();?>images/bkg_th.gif") repeat-x scroll 0 100% #D9E5EE;
+   /* background: url("<?php echo $this->getSkinUrl();?>images/bkg_th.gif") repeat-x scroll 0 100% #D9E5EE;*/
+   background-color:#DFDFE0;
 }
 .data-table thead th {
     border-right: 1px solid #C2D3E0;
