--- a/app/design/frontend/gs-default/default/template/customer/form/edit.phtml
+++ b/app/design/frontend/gs-default/default/template/customer/form/edit.phtml
@@ -1,7 +1,10 @@
      <div class="head_result">PERSONAL DETAILS</div>
 		<div class="acctn_personal">
 		<?php echo $this->getMessagesBlock()->getGroupedHtml() ?> 
-		<form action="<?php echo $this->getUrl('customer/account/editPost') ?>" method="post" id="form-validate">
+		<div class="rad_8 btn_block" style="margin:0px;"> 
+			<button type="submit" title="<?php echo $this->__('Save Details') ?>" class="button"><span><?php echo $this->__('Save Details') ?></span></button>
+		</div>
+		<form action="<?php echo $this->getUrl('customer/account/editPost') ?>" method="post" id="form-validate"> 
         <?php echo $this->getBlockHtml('formkey')?>
 		  <table width="100%" border="0" cellspacing="0" cellpadding="0">
 			
@@ -38,13 +41,7 @@
 			</tr>
 			<tr>
 			  <td></td>
-			</tr>
-			<tr>
-			  <td><div class="rad_8 btn_block"> 
-				  <button type="submit" title="<?php echo $this->__('Save') ?>" class="button"><span><?php echo $this->__('Save') ?></span></button>
- 				</div>
-			</td>
-			</tr>
+			</tr> 
 		  </table>
 		</form>
 		</div>
