--- a/app/design/frontend/gs-default/default/template/sales/order/view.phtml
+++ b/app/design/frontend/gs-default/default/template/sales/order/view.phtml
@@ -9,10 +9,25 @@
     overflow: hidden; 
 }
 .order-info-box {
-    background: url("<?php echo $this->getSkinUrl();?>/images/bkg_block-title.gif") repeat-x scroll 0 0 #FFFFFF;
+    background: url("<?php echo $this->getSkinUrl();?>images/bkg_block-title.gif") repeat-x scroll 0 0 #FFFFFF;
     border: 1px solid #D0CBC1;
     margin: 0 0 15px;
     padding: 12px 15px;
+}
+.my-account a:hover{
+	color:#77A33F;
+}
+.a-right {
+    text-align: right !important;
+}
+.data-table tfoot {
+    border-bottom: 1px solid #D9DDE3;
+}
+.data-table tfoot tr {
+    background-color: #DEE5E8 !important;
+}
+.data-table tfoot tr.first td {
+    background: url("<?php echo $this->getSkinUrl();?>images/bkg_tfoot.gif") repeat-x scroll 0 0 transparent;
 }
 </style>
 <div class="order-items order-details">
@@ -77,7 +92,7 @@
         </dl>
     </div>
     <?php endif; ?>
-    <div class="buttons-set">
+    <div class="buttons-set" style="margin-top:10px;">
         <p class="back-link"><a href="<?php echo $this->getBackUrl() ?>"><small>&laquo; </small><?php echo $this->getBackTitle() ?></a></p>
     </div>
 </div>
