changes made for print

--- a/app/design/frontend/gs-default/default/template/page/print.phtml
+++ b/app/design/frontend/gs-default/default/template/page/print.phtml
@@ -173,6 +173,9 @@ address {
     font-style: normal;
     line-height: 1.35;
 }
+.data-table thead th {
+   background-color:#DFDFE0;
+}
 </style>
 </head>
 <body class="page-print<?php echo $this->getBodyClass()?$this->getBodyClass():'' ?>">
