cganges made for printing

--- a/app/design/frontend/gs-default/default/template/page/print.phtml
+++ b/app/design/frontend/gs-default/default/template/page/print.phtml
@@ -177,6 +177,13 @@ address {
    background:#DFDFE0;
    background-color:#DFDFE0;
 }
+.buttons-set {
+    border-top: 1px solid #E4E4E4;
+    clear: both;
+    margin: 4em 0 0;
+    padding: 8px 0 0;
+    text-align: right;
+}
 </style>
 </head>
 <body class="page-print<?php echo $this->getBodyClass()?$this->getBodyClass():'' ?>">
