--- a/app/design/frontend/gs-default/default/template/page/print.phtml
+++ b/app/design/frontend/gs-default/default/template/page/print.phtml
@@ -182,6 +182,9 @@ address {
     right: 0;
     top: 0;
 }
+.nobr {
+    white-space: nowrap !important;
+}
 </style>
 </head>
 <body class="page-print<?php echo $this->getBodyClass()?$this->getBodyClass():'' ?>">
