--- a/app/design/frontend/gs-default/default/template/sales/order/history.phtml
+++ b/app/design/frontend/gs-default/default/template/sales/order/history.phtml
@@ -1,4 +1,11 @@
 <style type="text/css">
+
+.buttons-set{
+	margin-top:5px;
+}
+.buttons-set a:hover{
+	color:#77A33F;
+}
 .acctn_personal .limiter select{
 	width:auto;
     padding: 0px;
