--- a/skin/frontend/gs-default/default/css/styles.css
+++ b/skin/frontend/gs-default/default/css/styles.css
@@ -1799,7 +1799,7 @@ select.error_field{
 }
 /** MESSAGES **/
 .validation-advice {
-	color: #EB340A;
+	color: #FF0000;
 	font-size:10px;
 }
 ul.messages{
