--- a/app/design/frontend/gs-default/default/template/customer/address/edit.phtml
+++ b/app/design/frontend/gs-default/default/template/customer/address/edit.phtml
@@ -1,3 +1,6 @@
+<style type="text/css">
+	.btn_block,.btn_block *{cursor:pointer;}
+</style>    
 <?php $conf = Mage::getStoreConfig('general');?>
 <?php if($this->getTitle()): ?>
 	<div class="head_result">
