--- a/app/design/frontend/gs-default/default/template/customer/form/edit.phtml
+++ b/app/design/frontend/gs-default/default/template/customer/form/edit.phtml
@@ -1,4 +1,7 @@
-     <div class="head_result">PERSONAL DETAILS</div>
+<style type="text/css">
+		.btn_block,.btn_block *{cursor:pointer;}
+</style>    
+	<div class="head_result">PERSONAL DETAILS</div>
 		<div class="acctn_personal">
 		<?php echo $this->getMessagesBlock()->getGroupedHtml() ?> 
 		<form action="<?php echo $this->getUrl('customer/account/editPost') ?>" method="post" id="form-validate"> 
