--- a/app/design/frontend/gs-default/default/template/customer/form/newsletter.phtml
+++ b/app/design/frontend/gs-default/default/template/customer/form/newsletter.phtml
@@ -1,4 +1,7 @@
- <div class="head_result">
+<style type="text/css">
+	.btn_block,.btn_block *{cursor:pointer;} 
+</style>
+<div class="head_result">
    <?php echo $this->__('Newsletter Subscription') ?> 
 </div>
 <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
