--- a/app/design/frontend/gs-default/default/template/wishlist/sharing.phtml
+++ b/app/design/frontend/gs-default/default/template/wishlist/sharing.phtml
@@ -1,3 +1,6 @@
+<style type="text/css">
+	.btn_block,.btn_block *{cursor:pointer;}
+</style>
 <div class="head_result"> <?php echo $this->__('Share Your Wishlist') ?></div> 
 <div class="acctn_personal">
 <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
