--- a/app/design/frontend/gs-default/default/template/wishlist/view.phtml
+++ b/app/design/frontend/gs-default/default/template/wishlist/view.phtml
@@ -2,6 +2,10 @@
 div.notify-message { margin-bottom:10px; margin-bottom:14px;}    
 div.notify-message ul.messages { padding-bottom:14px;border-bottom:1px solid #CCCCCC;}   
 </style>
+<style type="text/css">
+	.btn_block,.btn_block *{cursor:pointer;}
+	.btn_block2,.btn_block2 *{cursor:pointer;}
+</style>
  <?php if ($this->helper('wishlist')->isAllow()) : ?>
  <div class="head_result"><?php echo __('My Wishlists');?></div>
 <div class="acctn_wishlist">
