- add parameter to hidecart

--- a/app/design/frontend/gs-default/default/template/checkout/cart/sidebar.phtml
+++ b/app/design/frontend/gs-default/default/template/checkout/cart/sidebar.phtml
@@ -20,7 +20,7 @@
 					<p style="padding:0px;">&nbsp;</p>
 				<?php endif; ?>
 				<div>
-					<a href="#" class="btn-close" onclick="GSWrapper.HeaderCart.hideCart();"><?php echo $this->__('Close') ?></a>
+					<a href="#" class="btn-close" onclick="GSWrapper.HeaderCart.hideCart(true);"><?php echo $this->__('Close') ?></a>
 				</div>
 			</div>
 			<?php foreach($_items as $_item): ?>
