--- a/app/design/frontend/gs-default/default/template/catalog/product/list.phtml
+++ b/app/design/frontend/gs-default/default/template/catalog/product/list.phtml
@@ -85,7 +85,7 @@
             </div>
         </li>
 		<?php */ ?>
-		<li>
+		<li class="item<?php if( ++$_iterator == sizeof($_productCollection) ): ?> last<?php endif; ?>">
 			<div class="img_product">
 				<a href="<?php echo $_product->getProductUrl() ?>" title="<?php echo $this->stripTags($this->getImageLabel($_product, 'small_image'), null, true) ?>">
 					<img alt="" src="<?php echo $this->helper('catalog/image')->init($_product, 'small_image')->resize(168); ?>" width="168" height="168"/>
